--- a/index.html
+++ b/index.html
@@ -13191,7 +13191,7 @@ Elijas Dapšauskas<br>2019 m.</center>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Šis iteracinis generavimo algoritmas gali būti implementuotas įvairiais būdais. Čia pasirinktas rekursinis algoritmas, tinkantis nedidelėmis $n$ reikšmėmis.</p>
+<p>Šis iteracinis generavimo algoritmas gali būti implementuotas įvairiais būdais. Čia pasirinktas rekursinis algoritmas, tinkantis su nedidelėmis $n$ reikšmėmis.</p>
 
 </div>
 </div>
@@ -13800,7 +13800,7 @@ QmCC"
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Grafiniu-b&#363;du-stebima-santykin&#279;-paklaida-dyd&#279;jant-modeliavimo-ta&#353;k&#371;-kiekiui">Grafiniu b&#363;du stebima santykin&#279; paklaida dyd&#279;jant modeliavimo ta&#353;k&#371; kiekiui<a class="anchor-link" href="#Grafiniu-b&#363;du-stebima-santykin&#279;-paklaida-dyd&#279;jant-modeliavimo-ta&#353;k&#371;-kiekiui">&#182;</a></h5>
+<h5 id="Grafiniu-b&#363;du-stebima-santykin&#279;-paklaida-dyd&#279;jant-modeliavimo-ta&#353;k&#371;-kiekiui">Grafiniu b&#363;du stebima santykin&#279; paklaida did&#279;jant modeliavimo ta&#353;k&#371; kiekiui<a class="anchor-link" href="#Grafiniu-b&#363;du-stebima-santykin&#279;-paklaida-dyd&#279;jant-modeliavimo-ta&#353;k&#371;-kiekiui">&#182;</a></h5>
 </div>
 </div>
 </div>
